# rl-locomotion-cbf

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  README_new.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_core.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: cbf_config.yaml  env_config.yaml  ppo_config.yaml
docs/: theory.md  training_guide.md
scripts/: evaluate_safe.py  evaluate_unsafe.py  example_complete.py  train_ppo.py  visualize_cbf.py
src/rl_locomotion_cbf/: __init__.py
src/rl_locomotion_cbf/dynamics/: __init__.py  linearization.py  quadruped_dynamics.py
src/rl_locomotion_cbf/envs/: __init__.py  quadruped_env.py  terrain_generator.py
src/rl_locomotion_cbf/policies/: __init__.py  network_architectures.py  ppo_policy.py
src/rl_locomotion_cbf/safety/: __init__.py  barrier_functions.py  cbf_filter.py  qp_solver.py
tests/: __init__.py  test_cbf.py  test_dynamics.py  test_environments.py
