[build-system]
requires = ["setuptools>=82.0.1", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-locomotion-cbf"
version = "0.0.1"
description = "Reinforcement learning locomotion with control barrier functions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"

[project.urls]
"Source" = "https://github.com/ansh1113/rl-locomotion-cbf"

[tool.setuptools.packages.find]
where = ["src"]
